; ModuleID = '/home/carl/AnghaBench/zstd/programs/extr_fileio.c_addHandler.c'
source_filename = "/home/carl/AnghaBench/zstd/programs/extr_fileio.c_addHandler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_artefact = common dso_local global i8* null, align 8
@SIGINT = common dso_local global i32 0, align 4
@INThandler = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @addHandler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @addHandler(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = call i64 @UTIL_isRegularFile(i8* %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %11

6:                                                ; preds = %1
  %7 = load i8*, i8** %2, align 8
  store i8* %7, i8** @g_artefact, align 8
  %8 = load i32, i32* @SIGINT, align 4
  %9 = load i32, i32* @INThandler, align 4
  %10 = call i32 @signal(i32 %8, i32 %9)
  br label %12

11:                                               ; preds = %1
  store i8* null, i8** @g_artefact, align 8
  br label %12

12:                                               ; preds = %11, %6
  ret void
}

declare dso_local i64 @UTIL_isRegularFile(i8*) #1

declare dso_local i32 @signal(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
